--- a/gedcom-5.5.2.html
+++ b/gedcom-5.5.2.html
@@ -33,9 +33,9 @@ Everyone is permitted to copy and distribute verbatim copies of this document, b
       <p>Everyone is permitted to copy and distribute verbatim copies of this document, but changing it is not allowed.</p>
     </div>
 
-    <section class="toc_container">
-      <h2 class="toc_title">Contents</h2>
-      <ul class="toc_list">
+    <section>
+      <h2>Contents</h2>
+      <ul class="toc-list">
         <!-- Table of Contents entries -->
 <li class="toc-0"><a href="#section-document-information">Document Information</a></li>
 <li class="toc-1"><a href="#abstract">Abstract</a></li>
