Use consistent doc style and add link to Implementation Notes

--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <style>
-* { margin:0; padding: 0; box-sizing: border-box; font-family: sans-serif; }
-body { margin: 1em auto; max-width:40em; padding:0 8px; border:1px solid #eee; }
-h1 { font-size:140%; margin: 0 0 1em 0; }
-h2 { font-size:120%; margin: 1em 0; }
-h3 { font-size:medium; margin: 1em 0; }
-p, h4, h5, h6 { margin: 0.5em 0; }
-  </style>
-  <title>GEDCOM 5.5.2</title>
+  <title>GEDCOM 5.5.2 Documents</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="alternate stylesheet" href="light.css" title="Light" />
+  <link rel="stylesheet" href="dark.css" title="Dark" />
 </head>
 <body>
-<ul>
-  <li><a href="gedcom-5.5.2.html">GEDCOM 5.5.2</a> (specification)</li>
-  <li><a href="extensions.html">Common GEDCOM Extensions</a></li>
-  <li><a href="source-applications.html">Source Applications</a></li>
-  <li><a href="notes.html">Notes for Contributors</a></li>
-  <li><a href="lds.html">Obsolete LDS Definitions</a></li>
-</ul>
+  <article>
+    <header>
+      <h1>GEDCOM 5.5.2</h1>
+    </header>
+
+    <p>These are documents associated with the GEDCOM 5.5.2 specification.</p>
+
+    <ul class="toc-list">
+      <li><a href="gedcom-5.5.2.html">GEDCOM 5.5.2</a> (specification)</li>
+      <li><a href="extensions.html">Common GEDCOM Extensions</a></li>
+      <li><a href="lds.html">Obsolete LDS Definitions</a></li>
+      <li><a href="source-applications.html">Source Applications</a></li>
+      <li><a href="implementation-notes.html">Implementation Notes</a></li>
+      <li><a href="notes.html">Notes for Contributors</a></li>
+    </ul>
+  </article>
 </body>
 </html>
