--- a/extensions.html
+++ b/extensions.html
@@ -74,6 +74,98 @@ Everyone is permitted to copy and distribute verbatim copies of this document, b
       <h2>Subrecords with Custom Tag Names</h2>
 
       <dl>
+        <dt id="tag--loc">_LOC <span class="tag-full-name">Location Record, Location Link</span></dt>
+        <dd>
+          <p>See <a href="#tag--plac">_PLAC</a>.</p>
+        </dd>
+
+        <dt id="tag--plac">_PLAC <span class="tag-full-name">Place Record, Place Link</span></dt>
+        <dd>
+          <p>Several programs implement custom place records to share place metadata with two or more PLAC subrecords. This effectively creates a "master place list" where common place metadata is specified only once. Place metadata typically includes latitude/longitude, multimedia references, and notes.</p>
+
+          <p>Programs that support place records typically allow all the subrecords that are valid under a PLAC subrecord as child records of a _PLAC record.</p>
+
+          <h3>Family Historian</h3>
+
+          <p>Family Historian uses the PLAC line_value as a key to find a _PLAC record. Family Historian assigns an ID to the _PLAC record, but the ID is not used as a pointer.</p>
+
+          <p>Family Historian uses a _PLAC subrecord to specify an additional place so an event may refer to two places, such as "from" and "to" places for an emigration event.</p>
+
+          <p>Example</p>
+<pre>
+1 EMIG
+2 PLAC Ames, Iowa
+2 _PLAC Parma, Ohio
+
+...
+
+0 @P1@ _PLAC Ames, Iowa
+1 MAP
+2 LATI N42.034722
+2 LONG W93.62
+0 @P2@ _PLAC Parma, Ohio
+1 MAP
+2 LATI N41.391944
+2 LONG W81.728611
+</pre>
+
+          <h3>GEDCOM 5.5EL</h3>
+
+          <p>The GEDCOM variant <i>GEDCOM 5.5EL</i> defines a _LOC record and subrecord. The records are linked using a GEDCOM ID and pointer. The _LOC record supports several subrecords, more than shown in the example below.</p>
+
+          <p>Example</p>
+<pre>
+1 DEAT
+2 PLAC Ames, Iowa, United States
+3 _LOC @L1@
+
+...
+
+0 @L1@ _LOC
+1 NAME Ames, Iowa, United States
+1 MAP
+2 LATI N42.034722
+2 LONG W93.62
+</pre>
+
+          <h3>Legacy</h3>
+
+          <p>Legacy uses the PLAC line_value as a key to find a _PLAC_DEFN record which has a matching PLAC subrecord.</p>
+
+          <p>Example</p>
+<pre>
+1 BIRT
+2 PLAC Ames, Iowa, United States
+
+...
+
+0 _PLAC_DEFN
+1 PLAC Ames, Iowa, United States
+1 ABBR Ames, IA
+1 MAP
+2 LATI N42.034722
+2 LONG W93.62
+</pre>
+
+          <h3>RootsMagic</h3>
+
+          <p>RootsMagic uses the PLAC line_value as a key to find a _PLAC record.</p>
+
+          <p>Example</p>
+<pre>
+1 BIRT
+2 PLAC Ames, Iowa
+
+...
+
+0 _PLAC Ames, Iowa
+1 MAP
+2 LATI N42.034722
+2 LONG W93.62
+</pre>
+
+
+        </dd>
 
         <dt id="tag--prim">_PRIM <span class="tag-full-name">Primary or Preferred</span></dt>
         <dd>
@@ -154,7 +246,7 @@ Everyone is permitted to copy and distribute verbatim copies of this document, b
 
           <p>_SDATE is supported on input and/or output by:</p>
           <ul>
-            <li>Family Historian  (when using Export GEDCOM plug-in)</li>
+            <li>Family Historian  (when using Export GEDCOM File plug-in)</li>
             <li>RootsMagic</li>
             <li>The Master Genealogist</li>
           </ul>
